# diff-core

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  TODOs.md  codex-research-loop.sh  prompt.md
.claude/commands/: research.md
.github/workflows/: ci.yml  release.yml
crates/diffcore-cli/: Cargo.toml
crates/diffcore-core/: Cargo.toml
crates/diffcore-tauri/: Cargo.toml  tauri.conf.json
crates/diffcore-tauri/capabilities/: default.json
crates/diffcore-tauri/src/: activity_stream.rs  commands.rs  lib.rs  main.rs
crates/diffcore-tauri/tests/: activity_stream_integration.rs  app_launch_smoke.rs  comment_integration.rs  editor_integration.rs  ignore_paths_integration.rs  repo_integration.rs
crates/diffcore-tauri/ui/: index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
crates/diffcore-tauri/ui/src/: App.tsx  buildManifestPrompt.test.ts  buildManifestPrompt.ts  mock.ts  styles.css  types.ts
crates/diffcore-tauri/ui/src/components/: DiffViewer.tsx  FlowGraph.tsx  SourceExplorer.tsx  monacoTheme.ts
crates/diffcore-tauri/ui/tests/e2e/: activity-stream.spec.ts  branch-comparison.spec.ts  branding.spec.ts  bugfixes.spec.ts  comment-strip-v2.spec.ts  gutter-comments.spec.ts  hardening.spec.ts  onboarding.spec.ts  readme-screenshots.spec.ts  review-comments.spec.ts  screenshots.spec.ts  tauri-audit.spec.ts  ui-improvements.spec.ts  visual-polish.spec.ts
crates/flowdiff-cli/: Cargo.toml
crates/flowdiff-cli/src/: main.rs
crates/flowdiff-core/: Cargo.toml
crates/flowdiff-core/benches/: parse_benchmark.rs
crates/flowdiff-core/queries/c/: calls.scm  definitions.scm  imports.scm
crates/flowdiff-core/queries/cpp/: assignments.scm  calls.scm  definitions.scm  imports.scm
crates/flowdiff-core/queries/csharp/: assignments.scm  definitions.scm  imports.scm
crates/flowdiff-core/queries/go/: assignments.scm  definitions.scm  imports.scm
crates/flowdiff-core/queries/java/: definitions.scm
crates/flowdiff-core/queries/kotlin/: assignments.scm  definitions.scm
crates/flowdiff-core/queries/php/: calls.scm  definitions.scm  imports.scm
crates/flowdiff-core/queries/python/: calls.scm  definitions.scm  imports.scm
crates/flowdiff-core/queries/ruby/: assignments.scm  calls.scm  imports.scm
crates/flowdiff-core/queries/rust/: assignments.scm  definitions.scm  imports.scm
crates/flowdiff-core/queries/scala/: definitions.scm  imports.scm
crates/flowdiff-core/queries/swift/: calls.scm  definitions.scm
crates/flowdiff-core/queries/typescript/: assignments.scm  calls.scm  definitions.scm  exports.scm  imports.scm
crates/flowdiff-core/src/: ast.rs  cache.rs  cluster.rs  config.rs  embeddings.rs  entrypoint.rs  flow.rs  git.rs  graph.rs  ir.rs  lib.rs  output.rs  pipeline.rs  query_engine.rs  rank.rs  types.rs
crates/flowdiff-core/src/cluster/: bfs.rs  classify.rs  embeddings_refine.rs  infra.rs  merge.rs  mod.rs  rescue.rs  stem.rs  tests.rs
crates/flowdiff-core/src/eval/: fixtures.rs  mod.rs  report.rs  repos.rs  scoring.rs
crates/flowdiff-core/src/llm/: anthropic.rs  claude_cli.rs  codex_cli.rs  gemini.rs  judge.rs  mod.rs  openai.rs  refinement.rs  schema.rs  vcr.rs
crates/flowdiff-core/tests/: adversarial_refinement.rs  cli_activity_live.rs  cross_layer_audit.rs  e2e_pipeline.rs  eval_suite.rs  llm_judge.rs  llm_live.rs  llm_provider_audit.rs  regressions.rs  security_audit.rs  semantic_docs_classification.rs  snapshot_tests.rs  vcr_integration.rs
crates/flowdiff-core/tests/fixtures/vcr_adversarial_refinement/: refinement_54843021036a158b.json  refinement_58ef8abc62ad4c38.json  refinement_6a899782918569e5.json  refinement_7728ce62a6f808ee.json  refinement_ce11a5f8a8780332.json  refinement_eaef8d070300fb47.json
crates/flowdiff-core/tests/helpers/: graph_assertions.rs  llm_helpers.rs  mod.rs  repo_builder.rs
crates/flowdiff-core/tests/snapshots/: snapshot_tests__cross_cutting_refactor.snap  snapshot_tests__empty_diff.snap  snapshot_tests__go_http_api.snap  snapshot_tests__infrastructure_heavy.snap  snapshot_tests__mixed_language.snap  snapshot_tests__multi_entrypoint.snap  snapshot_tests__python_fastapi.snap  snapshot_tests__simple_express_app.snap
crates/flowdiff-tauri/: Cargo.toml  tauri.conf.json
crates/flowdiff-tauri/capabilities/: default.json
crates/flowdiff-tauri/icons/: icon.icns
crates/flowdiff-tauri/src/: activity_stream.rs  commands.rs  lib.rs  main.rs
crates/flowdiff-tauri/tests/: activity_stream_integration.rs  app_launch_smoke.rs  comment_integration.rs  editor_integration.rs  ignore_paths_integration.rs  repo_integration.rs
crates/flowdiff-tauri/ui/: index.html  package-lock.json  package.json  playwright.config.ts
crates/flowdiff-tauri/ui/src/: App.tsx  main.tsx  mock.ts  styles.css  types.ts
crates/flowdiff-tauri/ui/src/components/: DiffViewer.tsx  ErrorBoundary.tsx  FlowGraph.tsx  MermaidGraph.tsx  RiskHeatmap.tsx  SourceExplorer.tsx  monacoTheme.ts
crates/flowdiff-tauri/ui/tests/: tsconfig.json
crates/flowdiff-tauri/ui/tests/e2e/: activity-stream.spec.ts  branding.spec.ts  bugfixes.spec.ts  flow-replay.spec.ts  hardening.spec.ts  infrastructure-subgroups.spec.ts  onboarding.spec.ts  review-comments.spec.ts  source-explorer.spec.ts  tauri-audit.spec.ts  ui-improvements.spec.ts  visual-polish.spec.ts
docs/: eval-suite.md  grouping-overhaul.md  optimizing-semantic-grouping.md
eval/: repositories.example.toml  repositories.large-diff.synthetic.all.toml  repositories.large-diff.synthetic.near-threshold.toml  repositories.large-diff.synthetic.toml  repositories.large-diff.toml  repositories.public-oss.example.toml  repositories.research.toml
eval/repos-large-diff-synthetic-gated/: synthetic-large-diff-apps-page-flow-early-2048.toml  synthetic-large-diff-apps-page-flow-late-2048.toml  synthetic-large-diff-domain-workflows-early-2048.toml  (+4 more)
experiments/: baseline.json  experiments.jsonl  human-experiment-ideas-for-later.md  program.md
scripts/: generate_large_diff_synthetics.py  install-git-hooks.sh
specs/: diff-analyzer.md  improved-clustering.md  readme.md
(+243 files in other folders)
