[package]
name = "diffcore-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
diffcore-core = { path = "../diffcore-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
serde = { workspace = true }
serde_json = { workspace = true }
git2 = { version = "0.19", features = ["vendored-openssl"] }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = { workspace = true }
axum = "0.7"
async-stream = "0.3"
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4", "serde"] }
sha2 = "0.10"
hex = "0.4"
futures-core = "0.3"

[dev-dependencies]
tempfile = "3"
serde_json = { workspace = true }
reqwest = "0.12"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSApplication", "NSImage", "NSRunningApplication"] }
objc2-foundation = { version = "0.3", features = ["NSData"] }
