[package]
name = "flowdiff-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flowdiff"
path = "src/main.rs"

[dependencies]
flowdiff-core = { path = "../flowdiff-core" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
