[package]
name = "flowdiff-cli"
version.workspace = true
edition.workspace = true

[[bin]]
name = "flowdiff"
path = "src/main.rs"

[dependencies]
flowdiff-core = { path = "../flowdiff-core" }
clap = { version = "4", features = ["derive"] }
serde_json = { workspace = true }
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
tempfile = "3"
log = { workspace = true }
env_logger = "0.11"

[features]
embeddings = ["flowdiff-core/embeddings"]
