[package]
name = "flowdiff-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
git2 = "0.19"
thiserror = "2"
tree-sitter = "0.26.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"

[dev-dependencies]
proptest = "1"
tempfile = "3"
