[package]
name = "flowdiff-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
git2 = "0.19"
thiserror = "2"
tree-sitter = "0.26.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
toml = "0.8"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
rayon = "1.10"

[dev-dependencies]
proptest = "1"
tempfile = "3"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
dotenv = "0.15"
