[package]
name = "flowdiff-core"
version.workspace = true
edition.workspace = true

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
petgraph = "0.6"
git2 = "0.19"
thiserror = "2"
tree-sitter = "0.26.7"
tree-sitter-typescript = "0.23.2"
tree-sitter-python = "0.25.0"
tree-sitter-go = "0.25.0"
tree-sitter-rust = "0.24.1"
tree-sitter-java = "0.23.5"
toml = "0.8"
glob = "0.3"
reqwest = { version = "0.12", features = ["json"] }
tokio = { version = "1", features = ["full"] }
async-trait = "0.1"
sha2 = "0.10"
hex = "0.4"
chrono = { version = "0.4", features = ["serde"] }
schemars = "0.8"
rayon = "1.10"
log = { workspace = true }
tempfile = "3"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-php = "0.24.2"
tree-sitter-ruby = "0.23.1"

[features]
## Enables test-only APIs like `with_base_url` on LLM provider structs.
## Integration tests should enable this feature; production builds must not.
test-support = []

# Enable test-support feature automatically when running tests
# (dev-dependencies trigger `cfg(test)` in unit tests but not integration tests,
# so we also enable the feature here for integration test access to `with_base_url`).
[dev-dependencies]
flowdiff-core = { path = ".", features = ["test-support"] }
proptest = "1"
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
dotenv = "0.15"
