[package]
name = "flowdiff-tauri"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
flowdiff-core = { path = "../flowdiff-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { workspace = true }
serde_json = { workspace = true }
git2 = "0.19"
tokio = { version = "1", features = ["full"] }
thiserror = "2"
log = { workspace = true }
